<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/celticslogo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/celtics_quiz_header"
            android:textColor="#BA9653"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/q1"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q12"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fillblankone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#BA9653"
                android:hint="Your Answer"
                android:inputType="textCapWords"
                android:textColor="#BA9653"
                android:textColorHint="#BA9653"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="5dp"
                android:text="@string/q13"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/q2"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/piercecheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:text="@string/piercebox"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/delontecheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:text="@string/delontebox"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/birdcheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:buttonTint="@android:color/white"
                android:text="@string/birdbox"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/perkinscheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="14dp"
                android:buttonTint="@android:color/white"
                android:text="@string/perkinsbox"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/q3"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/kyrieRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:text="@string/kyrieradio"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/jaysonRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:text="@string/jaysonradio"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/gordonRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:text="@string/gordonradio"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/marcusRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:buttonTint="@android:color/white"
                android:text="@string/marcusradio"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/fillblanktwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#BA9653"
                android:hint="@string/youranswer"
                android:textColor="#BA9653"
                android:textColorHint="#BA9653"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#BA9653"
            android:onClick="submitanswers"
            android:text="@string/submitbutton"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
